feat: ex3 runner and configurations

--- a/TP3/ex3_config.json
+++ b/TP3/ex3_config.json
@@ -1,4 +1,4 @@
 {
-  "exercise": 1,
-  "config_file": ["ex3_1_config.json", "ex3_2_config.json", "ex3_3_config.json"]
+  "exercise": 2,
+  "config_file": ["ex3config/ex3_1_config.json", "ex3config/ex3_2_config.json", "ex3config/ex3_3_config.json"]
 }
