--- a/TP3/ex3config/ex3_3_config.json
+++ b/TP3/ex3config/ex3_3_config.json
@@ -1,5 +1,11 @@
 {
     "learning_rate": 0.01,
     "epochs": 1000,
-    "hiddenLayers": [10, 10]
+    "hiddenLayers": [10, 10],
+    "batch_size": 1,
+    "momentum": 0,
+    "adaptive_eta": 0,
+    "adaptive_k": 2,
+    "adaptive_inc": 0.5,
+    "adaptive_dec": 0.01
 }
