feat: denoising autoencoder mlp

--- a/TP5/ej1b/config.json
+++ b/TP5/ej1b/config.json
@@ -1,14 +1,14 @@
 {
-    "learning_rate": 0.1,
-    "epochs": 100,
-    "hiddenLayers": [32, 16, 8, 2, 8, 26, 32],
+    "learning_rate": 0.0005,
+    "epochs": 15000,
+    "hidden_layers": [20, 15, 20],
     "batch_size": 1,
-    "momentum": 0,
+    "momentum": 1,
     "adaptive_eta": 0,
     "adaptive_k": 2,
     "adaptive_inc": 0.5,
     "adaptive_dec": 0.01,
-    "fonts": 2,
+    "fonts": 1,
     "noise_factor": 0.5,
-    "noise_coverage": 1
+    "noise_coverage": 0.5
 }
