feat: denoising autoencoder

--- a/TP5/ej1b/config.json
+++ b/TP5/ej1b/config.json
@@ -1,7 +1,7 @@
 {
     "learning_rate": 0.0005,
-    "epochs": 15000,
-    "hidden_layers": [20, 15, 20],
+    "epochs": 25000,
+    "hidden_layers": [20, 15, 8, 15, 20],
     "batch_size": 1,
     "momentum": 1,
     "adaptive_eta": 0,
@@ -9,6 +9,5 @@
     "adaptive_inc": 0.5,
     "adaptive_dec": 0.01,
     "fonts": 1,
-    "noise_factor": 0.5,
-    "noise_coverage": 0.5
+    "noise_factor": 0.1
 }
